# us-unique-names-project

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  LICENSE  README.md  SOURCE_CITATIONS.md  pyproject.toml
config/: historical_abbreviations_allowlist.csv  sources.yaml
docs/: implementation_roadmap.md  privacy_retention_policy.md  zenodo_release.md
examples/fixtures/: README.md
schemas/: names.sql
scripts/: download_sources.py  run_baseline_pipeline.sh
src/us_unique_names/: build_baseline.py  cli.py  db.py  download_sources.py  export_release.py  normalize.py  registry.py  release_coverage.py  source_checks.py  validate.py
src/us_unique_names/extractors/: __init__.py  census.py  dispatch.py  ssa.py
tests/: test_build_baseline.py  test_cli_ingest_source.py  test_db_paths.py  test_download_sources.py  test_export_release.py  test_extractors.py  test_fixture_pipeline.py  test_normalize.py  test_registry.py  test_release_coverage.py  test_source_checks.py  test_validate.py
us_unique_names_project_scaffold/us_unique_names_project/: .gitignore  EXECUTION_SUMMARY.md  README.md
us_unique_names_project_scaffold/us_unique_names_project/config/: sources.yaml
us_unique_names_project_scaffold/us_unique_names_project/schemas/: names.sql
us_unique_names_project_scaffold/us_unique_names_project/scripts/: download_baseline_sources.sh
us_unique_names_project_scaffold/us_unique_names_project/tests/: test_export_release.py  test_extractors.py  test_normalize.py  (+1 more)
us_unique_names_project_v0_1/us_unique_names_project/: .gitignore  README.md  requirements.txt
(+20 files in other folders)
